Action can't be played on Lib Loaded Armature #45196

Closed
opened 2015-06-25 20:25:13 +02:00 by Bruno · 6 comments

System Information
Ubuntu 14.04 LTS 64Bit
AMD FX-8350
16 GB RAM
GTX 770 4GB

Blender Version
Broken: 2.75.1
Worked: 2.71

No Action can be played on a lib loaded Armature.Neither via Logic Brick or Python.

Loading and Loaded Blend file in zip -> Lib Load Action Playback.zip

**System Information** Ubuntu 14.04 LTS 64Bit AMD FX-8350 16 GB RAM GTX 770 4GB **Blender Version** Broken: 2.75.1 Worked: 2.71 No Action can be played on a lib loaded Armature.Neither via Logic Brick or Python. Loading and Loaded Blend file in zip -> [Lib Load Action Playback.zip](https://archive.blender.org/developer/F197379/Lib_Load_Action_Playback.zip)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Brunfunstudios

Added subscriber: @Brunfunstudios

Added subscriber: @JacobMerrill-1

Added subscriber: @JacobMerrill-1

I think* A revision just fixed this, you can probably close it,

https://developer.blender.org/T44069

I think* A revision just fixed this, you can probably close it, https://developer.blender.org/T44069

This issue was referenced by e80e4c937b

This issue was referenced by e80e4c937bd20132bec52181dfa16be6883b5802

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45196
No description provided.