BGE: Fix T45196 armature action on libloading.